--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <a2wp-app>Loading...</a2wp-app>
   </body>
 </html>
